Attempting fix for radio button label alignment

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -290,7 +290,6 @@ ul.navigation li {
     background-color: transparent;
     padding: 0.1em;
     margin:22px 8px 8px 8px;
-    min-height: 28px; /* should be content-driven */
     text-align:center;
 }
 
@@ -307,12 +306,13 @@ ul.navigation li {
     width: auto;    
     margin: 0;
     padding: 0;
+    float: none;
     line-height:1em;
     height: 1em;
 }
 #transport-mode-radio div input{
     text-align: right;
-    float: left;
+    float: none;
     padding: 0;
     margin: 0px 0.5em 0 0;
 }
